corrected footer list

--- a/github.html
+++ b/github.html
@@ -32,7 +32,7 @@
             <div>Settings</div>
         </section>
         <h4>Codeup's dev team</h4>
-        <artic>
+        <article>
             <img src="img/gray2.svg" alt="Kent Beck">
             <p>KentBeck
                 Member
@@ -48,7 +48,7 @@
                 Member
                 0 team
             </p>
-        </artic>
+        </article>
     </main>
     <footer>
         <p>2018 Github, Inc.</p>
@@ -69,22 +69,22 @@
                  <a href="help">Help</a>
             </li>
             <li>
-                <a href="Contact GitHub"></a>
-            </li>
-            <l>
-                <a href="API"></a>
-            </l>
-            <li>
-                <a href="Training"></a>
+                <a href="contact_github">Contact GitHub</a>
             </li>
             <li>
-                <a href="Shop"></a>
+                <a href="api">API</a>
             </li>
             <li>
-                <a href="Blog"></a>
+                <a href="training">Training</a>
             </li>
             <li>
-                <a href="About"></a>
+                <a href="shop">Shop</a>
+            </li>
+            <li>
+                <a href="blog">Blog</a>
+            </li>
+            <li>
+                <a href="about">About</a>
             </li>
         </ul>
     </footer>
