corrected internal link

--- a/welcome.html
+++ b/welcome.html
@@ -3,49 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <title>Veridian Dynamics</title>
+    <title>CSS Test Page</title>
+    <link rel="stylesheet" href="css/style.css">
+    <!--<style>-->
+        <!--.fancy-header {-->
+            <!--color:blue;-->
+            <!--text-decoration: underline;-->
+        <!--}-->
+    <!--</style>-->
 </head>
 <body>
 <header>
-    <h1 id="top">Top of the page</h1>
-    <h1>Welcome to Veridian Dynamics!</h1>
+    <a id="top"></a>
+    <h1 class="fancy-header">"Welcome to Veridian Dynamics!</h1>
     <p>At Veridian Dynamocs, <strong>we</strong> solve <em>your</em> problmes with <strong><em>technology</em></strong>
     </p>
 </header>
 <hr>
-<main>
-    <selectionj>
-        <h2>Core Values</h2>
+<main id="container">
+    <section>
+        <h2 class="normal-header">Core Values</h2>
         <ul>
             <li>Competence</li>
             <li>Involvment</li>
             <li>Technology</li>
         </ul>
-    </selectionj>
-    <selection>
-        <h2>Our Process</h2>
+    </section>
+    <section>
+        <h2 class="normal-header">Our Process</h2>
         <ol>
             <li>Plan</li>
             <li>Evaluate</li>
             <li>Implement</li>
         </ol>
-    </selection>
-    <selection>
-        <h2>2020 Vision</h2>
+    </section>
+    <section>
+        <h2 class="normal-header">2020 Vision</h2>
         <ul>
             <li>Become #1 in Technology</li>
             <li>Increase Success by 20% </li>
             <li>Increase Business by 30%</li>
         </ul>
-    </selection>
+    </section>
     <hr>
-    <selection>
-        <img src="img/scenic1.jpeg" alt=purple sky"">
-        <img src="img/scenic2.jpeg" alt=green river"">
-        <img src="img/scenic3.jpg" alt="water fall">
-        <img src="img/scenic4.jpg" alt="ocean">
-    </selection>
+    <section>
+        <h2 class="normal-header">Company Vision</h2>
+        <img src="img/scenic1.jpeg" alt=purple-sky"" width="455">
+        <img src="img/scenic2.jpeg" alt=green-river"" width="560">
+        <img src="img/scenic3.jpg" alt="water-fall" width="500pix">
+        <img src="img/scenic4.jpg" alt="ocean" width="460">
+    </section>
     <hr>
-    <h2>Company Vision</h2>
 </main>
 <footer>
     <h2>Our Product</h2>
