added new css style, trying to work on animation in header

--- a/welcome.html
+++ b/welcome.html
@@ -10,13 +10,13 @@
             <!--color:blue;-->
             <!--text-decoration: underline;-->
         <!--}-->
-    <!--</style>-->
+    <!--</style> This is an example of inline-->
 </head>
 <body>
 <header>
     <a id="top"></a>
-    <h1 class="fancy-header">"Welcome to Veridian Dynamics!</h1>
-    <p>At Veridian Dynamocs, <strong>we</strong> solve <em>your</em> problmes with <strong><em>technology</em></strong>
+    <h1>"Welcome to Veridian Dynamics!</h1>
+    <p>At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problmes with <strong><em>technology</em></strong>
     </p>
 </header>
 <hr>
