--- a/media-queries.html
+++ b/media-queries.html
@@ -22,7 +22,7 @@
     </ul>
 </nav>
 <div class="header-img">
-    <img src="images/cat.jpg" alt="cat">
+    <img src="img/cat.jpg" alt="cat">
 </div>
 <section id="main" class="main">
     <h2>Main Section</h2>
