--- a/objects.html
+++ b/objects.html
@@ -5,7 +5,7 @@
     <title>Objects</title>
 </head>
 <body>
-    <h1>Objects</h1>
+    <h1>Objects Exercise</h1>
     <script src="./js/objects.js"></script>
 </body>
 </html>
