added new buttons and functionality

--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -25,31 +25,45 @@
     culpa qui officia deserunt mollit anim id est laborum.
 </p>
 
+<button id="btn1">Button 1!</button>
+<button id="btn2">Button 2!</button>
+<button id="btn3">Button 3!</button>
+<button id="btn4">Button 4!</button>
+
 <script>
     // (function() {
         "use strict";
         // TODO: Uncomment next line and get the main header element by id
-        var mainHeader = document.getElementById("main-header");
-
-        console.log(mainHeader);
+        // var mainHeader = document.getElementById("main-header");
+        // console.log(mainHeader);
 
         // TODO: Set inner html of mainHeader to "JavaScript is Cool"
-        document.getElementById("main-header").innerHTML = "JavaScript is Cool!";
+        // document.getElementById("main-header").innerHTML = "JavaScript is Cool!";
 
         //alternative to this is mainHeader.innerHTML = "YADA YADA YADA"//
 
+        var mainHeader = document.getElementById("main-header");
+        var btn1 = document.getElementById("btn1");
+
+        btn1.addEventListener('click', function() {
+            mainHeader.innerHTML = "Javascript is Cool!"
+        });
+
         // TODO: Uncomment the next line and get the sub header element by id
         var subHeader = document.getElementById("sub-header");
-
-        console.log(subHeader);
+        // console.log(subHeader);
 
         //ALTERNATIVE TO THIS IS var subHeader = document.querySelector("#ID")//
 
 
         // TODO: Set the text color of subHeader to blue
-        document.getElementById("sub-header").style.color = "blue";
+        // document.getElementById("sub-header").style.color = "blue";
 
 
+        var btn2 = document.getElementById("btn2");
+        btn2.addEventListener('click', function() {
+            subHeader.style.color = "blue"
+        });
         // TODO: Uncomment the next line and get all list items
         // var listItems = document.querySelector('h1 ul');
 
@@ -66,6 +80,8 @@
             for (var i = 0; i < listItems.length; i += 2) {
                 listItems[i].style.color = "purple";
             }
+
+
 
         // var listItemsArr = Array.from(listItems);
         //
@@ -91,6 +107,12 @@
         document.getElementsByClassName("sub-paragraph")[0].innerText = "Mission Accomplished!";
 
         //or you can use innerText cause it asked for the text//
+
+
+
+
+
+
 
 
 
