--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -15,13 +15,36 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi aspernatur earum minus mollitia quae repellat veritatis voluptas.
     Adipisci, facere veritatis! Adipisci aliquid atque enim et nesciunt pariatur perspiciatis provident veniam!</p>
 
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, magni quod! Corporis dicta expedita id laboriosam non perspiciatis quo velit?
+        Animi consequuntur expedita mollitia non repellendus, sequi sit. Mollitia, repellendus.</p>
+
+    <div class="important">
+        <h3>NOTICE</h3>
+        <p>This is an important message!</p>
+    </div>
+    <div>
+        <h4 class="title">Grocery List</h4>
+    </div>
+    <ul id="groceryList">
+        <li>milk</li>
+        <li>honey</li>
+        <li>grapes</li>
+        <li>bread</li>
+        <li>jelly</li>
+    </ul>
+
+
+
+
+    <script src="js/jquery-2.2.4.min.js"></script>
 
     <script>
-    $(document).ready(function(){
+        "use strict";
+
+        $(document).ready(function(){
     alert("DOM has finished loading");
-    $("#blackBox").hide();
+    // $("#blackBox").hide();
     });
     </script>
-    <script src="js/jquery-2.2.4.min.js"></script>
 </body>
 </html>
