--- a/media-queries.html
+++ b/media-queries.html
@@ -3,38 +3,47 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Media Queries</title>
-    <link rel="stylesheet" href="css/media-queries.css">
     <meta name="viewport" content="width=device - width, initial-scale=1">
+    <title>Media Queries</title>
+    <link rel="stylesheet" href="css/grid-layout.css">
+    <link rel="stylesheet" href="css/media-queries.css">
 
 </head>
 <body>
-<div class="alert-info hidden-on-desktop">
-    <a href="#main">Skip to main content</a>
-</div>
-<h1>Company</h1>
-<nav>
-    <ul class="nav-links">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Work</a></li>
-        <li><a href="#">Contact</a></li>
-    </ul>
-</nav>
-<div class="header-img">
-    <img src="img/cat.jpg" alt="cat">
-</div>
-<section id="main" class="main">
-    <h2>Main Section</h2>
-    <p>Amet lorem accusantium maxime quis iusto. Sit aliquid quidem at animi commodi, iusto harum, non. Accusantium sequi consectetur deleniti soluta tempora. Maxime maiores blanditiis veritatis vitae amet maiores sapiente in?</p>
-</section>
-<section class="sub-section">
-    <h2>Sub-section</h2>
-    <p>Amet optio quidem voluptatum neque esse at saepe, reiciendis quaerat architecto unde minima aspernatur harum cum totam non amet soluta. Ea quae odio harum magni ab vitae tenetur. Itaque numquam!</p>
-</section>
-<footer>
-    <p>(c) 2017 All rights reserved</p>
-    <div id="social-media-links">
+    <div class="alert-info hidden-on-desktop">
+        <a href="#main">Skip to main content</a>
+    </div>
+    <h1>Company</h1>
+    <nav>
+        <div class="row">
+        <ul class="nav-links column">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Work</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+        </div>
+    </nav>
+
+    <div class="header-img">
+        <img src="img/cat.jpg" alt="cat">
+    </div>
+
+    <div class="row">
+        <div class="column two-third"></div>
+            <section id="main" class="main">
+                <h2>Main Section</h2>
+                <p>Amet lorem accusantium maxime quis iusto. Sit aliquid quidem at animi commodi, iusto harum, non. Accusantium sequi consectetur deleniti soluta tempora. Maxime maiores blanditiis veritatis vitae amet maiores sapiente in?</p>
+            </section>
+        <div class="one-third"></div>
+        <section class="sub-section one-third column">
+            <h2>Sub-section</h2>
+            <p>Amet optio quidem voluptatum neque esse at saepe, reiciendis quaerat architecto unde minima aspernatur harum cum totam non amet soluta. Ea quae odio harum magni ab vitae tenetur. Itaque numquam!</p>
+        </section>
+    </div>
+    <footer>
+        <p>(c) 2017 All rights reserved</p>
+        <div id="social-media-links">
 
     </div>
 </footer>
