--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 
-    <h1>Hello jQuery</h1>
+    <h1 class="codeup">Hello jQuery</h1>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus architecto atque aut corporis culpa delectus
+    <p class="codeup">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus architecto atque aut corporis culpa delectus
         fugit harum illo nobis officia qui, quidem vel voluptatibus. Consequuntur exercitationem mollitia quo sed soluta!</p>
 
 
@@ -18,33 +18,71 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, magni quod! Corporis dicta expedita id laboriosam non perspiciatis quo velit?
         Animi consequuntur expedita mollitia non repellendus, sequi sit. Mollitia, repellendus.</p>
 
-    <div class="important">
+    <div class="codeup">
         <h3>NOTICE</h3>
-        <p>This is an important message!</p>
+        <p>This is an important message! I have to go see my brother in Corpus Christi.</p>
     </div>
-    <div>
-        <h4 class="title">Grocery List</h4>
+    <div class="toDoList">
+        <h4>Grocery List</h4>
+        <ul id="groceryList">
+            <li>milk</li>
+            <li>honey</li>
+            <li id="veryImportant">grapes</li>
+            <li>bread</li>
+            <li>jelly</li>
+            <li>peanut butter</li>
+            <li>crackers</li>
+        </ul>
     </div>
-    <ul id="groceryList">
-        <li>milk</li>
-        <li>honey</li>
-        <li>grapes</li>
-        <li>bread</li>
-        <li>jelly</li>
-    </ul>
-
-
-
 
     <script src="js/jquery-2.2.4.min.js"></script>
-
     <script>
         "use strict";
-
         $(document).ready(function(){
-    alert("DOM has finished loading");
-    // $("#blackBox").hide();
-    });
+            // var contents = $("#veryImportant").html();
+            // alert(contents);
+
+            // $(".codeup").css("border", "1px solid red");
+            //
+            // $("li").css("font-size", "20px");
+
+            // $("h1").css("background", "yellow");
+            // $("p").css("background", "yellow");
+            // $("li").css("background", "yellow");
+            // $("li").css("background", "red");
+
+            //REMEMBER YOU CAN USE THE MULTIPLE SELECTOR AS WELL//
+
+
+            // var alertContent = $("h1").html();
+            // alert(alertContent)
+
+            $("h1,p,li").css("background", "yellow")
+
+
+
+
+
+
+
+
+
+        //     'h1').click(function() {
+        //     $(this).css("background-color", "blue");
+        // });
+        //
+        // $('p').dblclick(function() {
+        //     $(this).css('font-size', '18px');
+        // });
+        //
+        // $('li').hover(function() {
+        //     $(this).css('color', 'red');
+        // }, function() {
+        //     $(this).css('color', 'black');
+        // });
+
+
+        });
     </script>
 </body>
 </html>
